// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config 1`] = `
"<!-- Generated by documentation.js. Update this documentation by updating the source code. -->

## MyClass

This is my class, a demo thing.

**Properties**

-   \`howMany\` **[number](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number)** how many things it contains

### getFoo

Get the number 42

**Parameters**

-   \`getIt\` **[boolean](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Boolean)** whether to get the number

Returns **[number](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number)** forty-two

### getUndefined

Get undefined

Returns **[undefined](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/undefined)** does not return anything.

## Hello

World

"
`;

exports[`external modules option 1`] = `
Array [
  Object {
    "augments": Array [],
    "context": Object {
      "loc": SourceLocation {
        "end": Position {
          "column": 1,
          "line": 12,
        },
        "start": Position {
          "column": 0,
          "line": 10,
        },
      },
    },
    "description": Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "position": Position {
                "end": Object {
                  "column": 9,
                  "line": 1,
                  "offset": 8,
                },
                "indent": Array [],
                "start": Object {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "type": "text",
              "value": "I am in ",
            },
            Object {
              "position": Position {
                "end": Object {
                  "column": 28,
                  "line": 1,
                  "offset": 27,
                },
                "indent": Array [],
                "start": Object {
                  "column": 9,
                  "line": 1,
                  "offset": 8,
                },
              },
              "type": "inlineCode",
              "value": "external.input.js",
            },
            Object {
              "position": Position {
                "end": Object {
                  "column": 29,
                  "line": 1,
                  "offset": 28,
                },
                "indent": Array [],
                "start": Object {
                  "column": 28,
                  "line": 1,
                  "offset": 27,
                },
              },
              "type": "text",
              "value": ".",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 29,
              "line": 1,
              "offset": 28,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "paragraph",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 29,
          "line": 1,
          "offset": 28,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "root",
    },
    "errors": Array [],
    "examples": Array [],
    "kind": "function",
    "loc": SourceLocation {
      "end": Position {
        "column": 3,
        "line": 9,
      },
      "start": Position {
        "column": 0,
        "line": 7,
      },
    },
    "members": Object {
      "events": Array [],
      "global": Array [],
      "inner": Array [],
      "instance": Array [],
      "static": Array [],
    },
    "name": "foo",
    "namespace": "foo",
    "params": Array [],
    "path": Array [
      Object {
        "kind": "function",
        "name": "foo",
      },
    ],
    "properties": Array [],
    "returns": Array [],
    "sees": Array [],
    "tags": Array [],
    "throws": Array [],
    "todos": Array [],
  },
  Object {
    "augments": Array [],
    "context": Object {
      "loc": SourceLocation {
        "end": Position {
          "column": 2,
          "line": 10,
        },
        "start": Position {
          "column": 0,
          "line": 7,
        },
      },
    },
    "description": Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "position": Position {
                "end": Object {
                  "column": 38,
                  "line": 1,
                  "offset": 37,
                },
                "indent": Array [],
                "start": Object {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "type": "text",
              "value": "This function returns the number one.",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 38,
              "line": 1,
              "offset": 37,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "paragraph",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 38,
          "line": 1,
          "offset": 37,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "root",
    },
    "errors": Array [],
    "examples": Array [],
    "kind": "function",
    "loc": SourceLocation {
      "end": Position {
        "column": 3,
        "line": 6,
      },
      "start": Position {
        "column": 0,
        "line": 3,
      },
    },
    "members": Object {
      "events": Array [],
      "global": Array [],
      "inner": Array [],
      "instance": Array [],
      "static": Array [],
    },
    "name": "main",
    "namespace": "main",
    "params": Array [],
    "path": Array [
      Object {
        "kind": "function",
        "name": "main",
      },
    ],
    "properties": Array [],
    "returns": Array [
      Object {
        "description": Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 10,
                      "line": 1,
                      "offset": 9,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 1,
                      "line": 1,
                      "offset": 0,
                    },
                  },
                  "type": "text",
                  "value": "numberone",
                },
              ],
              "position": Position {
                "end": Object {
                  "column": 10,
                  "line": 1,
                  "offset": 9,
                },
                "indent": Array [],
                "start": Object {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": Object {
            "end": Object {
              "column": 10,
              "line": 1,
              "offset": 9,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "root",
        },
        "title": "returns",
        "type": Object {
          "name": "Number",
          "type": "NameExpression",
        },
      },
    ],
    "sees": Array [],
    "tags": Array [
      Object {
        "description": "numberone",
        "lineNumber": 2,
        "title": "returns",
        "type": Object {
          "name": "Number",
          "type": "NameExpression",
        },
      },
    ],
    "throws": Array [],
    "todos": Array [],
  },
  Object {
    "augments": Array [],
    "context": Object {
      "loc": SourceLocation {
        "end": Position {
          "column": 2,
          "line": 8,
        },
        "start": Position {
          "column": 0,
          "line": 5,
        },
      },
    },
    "description": Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "position": Position {
                "end": Object {
                  "column": 38,
                  "line": 1,
                  "offset": 37,
                },
                "indent": Array [],
                "start": Object {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "type": "text",
              "value": "This function returns the number one.",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 38,
              "line": 1,
              "offset": 37,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "paragraph",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 38,
          "line": 1,
          "offset": 37,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "root",
    },
    "errors": Array [],
    "examples": Array [],
    "kind": "function",
    "loc": SourceLocation {
      "end": Position {
        "column": 3,
        "line": 4,
      },
      "start": Position {
        "column": 0,
        "line": 1,
      },
    },
    "members": Object {
      "events": Array [],
      "global": Array [],
      "inner": Array [],
      "instance": Array [],
      "static": Array [],
    },
    "name": "index",
    "namespace": "index",
    "params": Array [],
    "path": Array [
      Object {
        "kind": "function",
        "name": "index",
      },
    ],
    "properties": Array [],
    "returns": Array [
      Object {
        "description": Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 10,
                      "line": 1,
                      "offset": 9,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 1,
                      "line": 1,
                      "offset": 0,
                    },
                  },
                  "type": "text",
                  "value": "numberone",
                },
              ],
              "position": Position {
                "end": Object {
                  "column": 10,
                  "line": 1,
                  "offset": 9,
                },
                "indent": Array [],
                "start": Object {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": Object {
            "end": Object {
              "column": 10,
              "line": 1,
              "offset": 9,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "root",
        },
        "title": "returns",
        "type": Object {
          "name": "Number",
          "type": "NameExpression",
        },
      },
    ],
    "sees": Array [],
    "tags": Array [
      Object {
        "description": "numberone",
        "lineNumber": 2,
        "title": "return",
        "type": Object {
          "name": "Number",
          "type": "NameExpression",
        },
      },
    ],
    "throws": Array [],
    "todos": Array [],
  },
]
`;

exports[`git option 1`] = `
Array [
  Object {
    "augments": Array [],
    "context": Object {
      "github": "[github]",
      "loc": SourceLocation {
        "end": Position {
          "column": 2,
          "line": 8,
        },
        "start": Position {
          "column": 0,
          "line": 5,
        },
      },
    },
    "description": Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "position": Position {
                "end": Object {
                  "column": 38,
                  "line": 1,
                  "offset": 37,
                },
                "indent": Array [],
                "start": Object {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "type": "text",
              "value": "This function returns the number one.",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 38,
              "line": 1,
              "offset": 37,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "paragraph",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 38,
          "line": 1,
          "offset": 37,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "root",
    },
    "errors": Array [],
    "examples": Array [],
    "kind": "function",
    "loc": SourceLocation {
      "end": Position {
        "column": 3,
        "line": 4,
      },
      "start": Position {
        "column": 0,
        "line": 1,
      },
    },
    "members": Object {
      "events": Array [],
      "global": Array [],
      "inner": Array [],
      "instance": Array [],
      "static": Array [],
    },
    "name": "simple.input",
    "namespace": "simple.input",
    "params": Array [],
    "path": Array [
      Object {
        "kind": "function",
        "name": "simple.input",
      },
    ],
    "properties": Array [],
    "returns": Array [
      Object {
        "description": Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 10,
                      "line": 1,
                      "offset": 9,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 1,
                      "line": 1,
                      "offset": 0,
                    },
                  },
                  "type": "text",
                  "value": "numberone",
                },
              ],
              "position": Position {
                "end": Object {
                  "column": 10,
                  "line": 1,
                  "offset": 9,
                },
                "indent": Array [],
                "start": Object {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": Object {
            "end": Object {
              "column": 10,
              "line": 1,
              "offset": 9,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "root",
        },
        "title": "returns",
        "type": Object {
          "name": "number",
          "type": "NameExpression",
        },
      },
    ],
    "sees": Array [],
    "tags": Array [
      Object {
        "description": "numberone",
        "lineNumber": 2,
        "title": "returns",
        "type": Object {
          "name": "number",
          "type": "NameExpression",
        },
      },
    ],
    "throws": Array [],
    "todos": Array [],
  },
]
`;

exports[`git option 2`] = `
"<!-- Generated by documentation.js. Update this documentation by updating the source code. -->

## simple.input

[undefined:5-8](<> \\"Source code on GitHub\\")

This function returns the number one.

Returns **[number](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number)** numberone
"
`;

exports[`highlightAuto md output 1`] = `
"<!-- Generated by documentation.js. Update this documentation by updating the source code. -->

## multilanguage.input

**Extends Foo, Bar**

This function returns the number one.

**Examples**

\`\`\`js
var myFoo = new Foo('[data-foo]');
myFoo.foo(42);
\`\`\`

\`\`\`html
<p data-foo>Data-Foo Element in the dom</p>
\`\`\`

\`\`\`css
[data-foo] {
   background-color: red;
}
\`\`\`

-   Throws **[Error](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Error)** if you give it something
-   Throws **[TypeError](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/TypeError)** if you give it something else

Returns **[Number](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number)** numberone
"
`;

exports[`multi-file input 1`] = `
Array [
  Object {
    "augments": Array [],
    "context": Object {
      "loc": SourceLocation {
        "end": Position {
          "column": 1,
          "line": 13,
        },
        "start": Position {
          "column": 0,
          "line": 10,
        },
      },
    },
    "description": Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "position": Position {
                "end": Object {
                  "column": 43,
                  "line": 1,
                  "offset": 42,
                },
                "indent": Array [],
                "start": Object {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "type": "text",
              "value": "This function returns the number plus two.",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 43,
              "line": 1,
              "offset": 42,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "paragraph",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 43,
          "line": 1,
          "offset": 42,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "root",
    },
    "errors": Array [],
    "examples": Array [
      Object {
        "description": "var result = returnTwo(4);
// result is 6",
      },
    ],
    "kind": "function",
    "loc": SourceLocation {
      "end": Position {
        "column": 3,
        "line": 9,
      },
      "start": Position {
        "column": 0,
        "line": 1,
      },
    },
    "members": Object {
      "events": Array [],
      "global": Array [],
      "inner": Array [],
      "instance": Array [],
      "static": Array [],
    },
    "name": "returnTwo",
    "namespace": "returnTwo",
    "params": Array [
      Object {
        "description": Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 11,
                      "line": 1,
                      "offset": 10,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 1,
                      "line": 1,
                      "offset": 0,
                    },
                  },
                  "type": "text",
                  "value": "the number",
                },
              ],
              "position": Position {
                "end": Object {
                  "column": 11,
                  "line": 1,
                  "offset": 10,
                },
                "indent": Array [],
                "start": Object {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": Object {
            "end": Object {
              "column": 11,
              "line": 1,
              "offset": 10,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "root",
        },
        "lineNumber": 3,
        "name": "a",
        "title": "param",
        "type": Object {
          "name": "Number",
          "type": "NameExpression",
        },
      },
    ],
    "path": Array [
      Object {
        "kind": "function",
        "name": "returnTwo",
      },
    ],
    "properties": Array [],
    "returns": Array [
      Object {
        "description": Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 10,
                      "line": 1,
                      "offset": 9,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 1,
                      "line": 1,
                      "offset": 0,
                    },
                  },
                  "type": "text",
                  "value": "numbertwo",
                },
              ],
              "position": Position {
                "end": Object {
                  "column": 10,
                  "line": 1,
                  "offset": 9,
                },
                "indent": Array [],
                "start": Object {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": Object {
            "end": Object {
              "column": 10,
              "line": 1,
              "offset": 9,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "root",
        },
        "title": "returns",
        "type": Object {
          "name": "Number",
          "type": "NameExpression",
        },
      },
    ],
    "sees": Array [],
    "tags": Array [
      Object {
        "description": "the number",
        "lineNumber": 3,
        "name": "a",
        "title": "param",
        "type": Object {
          "name": "Number",
          "type": "NameExpression",
        },
      },
      Object {
        "description": "numbertwo",
        "lineNumber": 4,
        "title": "returns",
        "type": Object {
          "name": "Number",
          "type": "NameExpression",
        },
      },
      Object {
        "description": "var result = returnTwo(4);
// result is 6",
        "lineNumber": 5,
        "title": "example",
      },
    ],
    "throws": Array [],
    "todos": Array [],
  },
  Object {
    "augments": Array [],
    "context": Object {
      "loc": SourceLocation {
        "end": Position {
          "column": 2,
          "line": 8,
        },
        "start": Position {
          "column": 0,
          "line": 5,
        },
      },
    },
    "description": Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "position": Position {
                "end": Object {
                  "column": 38,
                  "line": 1,
                  "offset": 37,
                },
                "indent": Array [],
                "start": Object {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "type": "text",
              "value": "This function returns the number one.",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 38,
              "line": 1,
              "offset": 37,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "paragraph",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 38,
          "line": 1,
          "offset": 37,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "root",
    },
    "errors": Array [],
    "examples": Array [],
    "kind": "function",
    "loc": SourceLocation {
      "end": Position {
        "column": 3,
        "line": 4,
      },
      "start": Position {
        "column": 0,
        "line": 1,
      },
    },
    "members": Object {
      "events": Array [],
      "global": Array [],
      "inner": Array [],
      "instance": Array [],
      "static": Array [],
    },
    "name": "simple.input",
    "namespace": "simple.input",
    "params": Array [],
    "path": Array [
      Object {
        "kind": "function",
        "name": "simple.input",
      },
    ],
    "properties": Array [],
    "returns": Array [
      Object {
        "description": Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 10,
                      "line": 1,
                      "offset": 9,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 1,
                      "line": 1,
                      "offset": 0,
                    },
                  },
                  "type": "text",
                  "value": "numberone",
                },
              ],
              "position": Position {
                "end": Object {
                  "column": 10,
                  "line": 1,
                  "offset": 9,
                },
                "indent": Array [],
                "start": Object {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": Object {
            "end": Object {
              "column": 10,
              "line": 1,
              "offset": 9,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "root",
        },
        "title": "returns",
        "type": Object {
          "name": "number",
          "type": "NameExpression",
        },
      },
    ],
    "sees": Array [],
    "tags": Array [
      Object {
        "description": "numberone",
        "lineNumber": 2,
        "title": "returns",
        "type": Object {
          "name": "number",
          "type": "NameExpression",
        },
      },
    ],
    "throws": Array [],
    "todos": Array [],
  },
]
`;
